Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Requirements__mdt/Vetting_Requirements__mdt.object-meta.xml
<CustomObject>
    <label>Vetting Requirements</label>
    <pluralLabel>Vetting Requirements</pluralLabel>
</CustomObject>