Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Requirements__mdt/fields/Attachment__c.field-meta.xml
<CustomField>
    <fullName>Attachment__c</fullName>
    <label>Attachment</label>
    <type>Url</type>
</CustomField>