Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Requirements__mdt/fields/Attachment_Link_ID__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Link_ID__c</fullName>
    <label>Attachment Link ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>