Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Requirements__mdt/fields/Attachment_Text__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Text__c</fullName>
    <label>Attachment Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>