Frankbelford/uatv1ba/force-app/main/default/objects/Vetting_Requirements__mdt/fields/Starting_Status__c.field-meta.xml
<CustomField>
    <fullName>Starting_Status__c</fullName>
    <label>Starting Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Verified</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>